--- a/index.html
+++ b/index.html
@@ -9,40 +9,42 @@
     <link rel="stylesheet" href="script.js">
 </head>
 <body>
+<div class="calculator" >
     <div class="textalign flex flexcol bg " >
         <div class="row">
-            <input class= "input" type="text">
+            <input class= "screen" type="text" id="screen" placeholder="0" > 
         </div>
         <div class="row1 " >
-            <button class="button" >AC</button>
-            <button class="button" >M+</button>
-            <button class="button" >M-</button>
-            <button class="button" >%</button>
+            <button class="symbol1" onclick="wipe()" >AC</button>
+            <button class="symbol1" onclick="wipe()" >C</button>
+            <button class="symbol1" onclick="show('/')" >/</button>
+            <button class="symbol" onclick="show('*')" >*</button>
         </div>
         <div class="row" >
-            <button class="button" >7</button>
-            <button class="button" >8</button>
-            <button class="button" >9</button>
-            <button class="button" >*</button>
+            <button class="button" onclick="show('7')" >7</button>
+            <button class="button" onclick="show('8')" >8</button>
+            <button class="button" onclick="show('9')" >9</button>
+            <button class="symbol" onclick="show('+')" >+</button>
         </div>
             <div class="row" >
-            <button class="button" >4</button>
-            <button class="button" >5</button>
-            <button class="button" >6</button>
-            <button class="button" >-</button>
+            <button class="button" onclick="show('4')" >4</button>
+            <button class="button" onclick="show('5')" >5</button>
+            <button class="button" onclick="show('6')" >6</button>
+            <button class="symbol" onclick="show('-')" >-</button>
         </div>
             <div class="row" >
-            <button class="button" >1</button>
-            <button class="button" >2</button>
-            <button class="button" >3</button>
-            <button class="button" >+</button>
+            <button class="button" onclick="show('1')" >1</button>
+            <button class="button" onclick="show('2')" >2</button>
+            <button class="button" onclick="show('3')" >3</button>
+            <button class="symbol" onclick="show('.')" >.</button>
         </div>
         <div class="row" >
-            <button class="button" >0</button>
-            <button class="button" >.</button>
-            <button class="button" >-</button>
-            <button class="button" >=</button>
+            <button class="button" onclick="show('(')" >(</button>
+            <button class="button" onclick="show('0')" >0</button>
+            <button class="button" onclick="show(')')" >)</button>
+            <button class="symbol" onclick="show('=')" >=</button>
         </div>
     </div>
+</div>
 </body>
 </html>
