Updated Java Script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
 </head>
 <body>
 <div class="calculator" >
@@ -42,9 +41,10 @@
             <button class="button" onclick="show('(')" >(</button>
             <button class="button" onclick="show('0')" >0</button>
             <button class="button" onclick="show(')')" >)</button>
-            <button class="symbol" onclick="show('=')" >=</button>
+            <button class="symbol" onclick="calc('=')" >=</button>
         </div>
     </div>
 </div>
+<script src="script.js" ></script>
 </body>
 </html>
